fixing overflow in mobile chrome

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 
+html{
+  overflow-x:hidden
+}
+
 
 body {
   margin: 0;
